# IBSA_POC

./: .gitignore  AZURE_DEPLOYMENT_GUIDE.md  CALL_SCRIPT_GENERATOR_DESIGN.md  DATA_DICTIONARY_ANALYSIS.md  EDA_INTEGRATION_COMPLETE.md  ENTERPRISE_ENHANCEMENT_PLAN.md  HCP_DETAIL_PAGE_ANALYSIS.md  HCP_EDA_INSIGHTS_INTEGRATED.md  HOW_TO_LAUNCH_UI.md  IBSA_PoC_EDA.ipynb  MODEL_ARCHITECTURE_COMPLETE_GUIDE.md  PAYER_DATA_CORRECTION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE4B_EDA_INTEGRATION_STRATEGY.md  PHASE4B_ENTERPRISE_REBUILD_COMPLETE.md  PHASE4B_EXECUTION_SUMMARY.md  PHASE4C_ENTERPRISE_REBUILD_COMPLETE.md  PHASE_6D_COMPLETE_SUMMARY.md  PYTHON_SETUP_GUIDE.md  QOQ_ANALYSIS_ADDED.md  RAG_KNOWLEDGE_BASE.md  RETRAIN_FULL_DATA.md  WALLET_SHARE_ANALYSIS_SUMMARY.md  add_tier_priority_scores.py  analyze_current_snapshot.py  analyze_payer_types.py  api_response.json  check_column_variance.py  check_database_for_mlr_content.py  check_product_trx_columns.py  check_territory_tables.py  cleanup_scripts_final.py  copy_predictions_to_ui.py  create_ui_compatible_dataset.py  diagnose_ngd_issue.py  examine_call_table.py  examine_next_call_objective.py  export_call_history.py  filter_ui_dataset.py  find_overlap.py  (+26 more)
NGDPreCallPlan/ibsa-poc-eda/: pyproject.toml  requirements.txt
NGDPreCallPlan/ibsa-poc-eda/cli/: main.py
NGDPreCallPlan/ibsa-poc-eda/config/: config.yaml
NGDPreCallPlan/ibsa-poc-eda/notebooks/: 01_data_discovery.ipynb  IBSA_EDA_Validation.ipynb
NGDPreCallPlan/ibsa-poc-eda/outputs/compliance/: content_library_report.json  required_disclaimers.json
NGDPreCallPlan/ibsa-poc-eda/outputs/eda/: executive_summary.txt  module1_hcp_universe.txt
NGDPreCallPlan/ibsa-poc-eda/outputs/eda-enterprise/: data_quality_report.json  eda_recommendations.json  feature_selection_report.json  hcp_segmentation_analysis.json  sample_roi_analysis.json
NGDPreCallPlan/ibsa-poc-eda/outputs/feature-validation/: feature_cleaning_report.json  statistical_validation_report.json
NGDPreCallPlan/ibsa-poc-eda/outputs/features/: feature_documentation_20251014_1309.txt  feature_documentation_20251014_1755.txt
NGDPreCallPlan/ibsa-poc-eda/outputs/generated_scripts/: script_12345_20251027_124933.json  script_12345_20251027_145522.json
NGDPreCallPlan/ibsa-poc-eda/outputs/models/: model_performance_report_20251030_025629.json  model_performance_report_20251030_030143.json  model_performance_report_20251030_030932.json  model_performance_report_20251030_115743.json  model_summary_20251013_2316.txt  (+12 more)
NGDPreCallPlan/ibsa-poc-eda/scripts/: build_model_ready.py  download_ibsa_data.py  run_eda.py
(+569 files in other folders)
